--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-dataclasses-json = "^0.5.7"
 python-dotenv = "^0.20.0"
+TikTokApi = "^5.2.2"
+pandas = "^1.4.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
@@ -20,7 +21,7 @@ semgrep = "^0.86.5"
 coverage = {extras = ["toml"], version = "^6.3.2"}
 pyproject-flake8 = "^0.0.1-alpha.3"
 yamllint = "^1.26.3"
-flake8 = "4.0.1"
+orjson = "^3.7.12"
 
 [build-system]
 requires = ["poetry-core"]
@@ -58,6 +59,15 @@ check_untyped_defs = true
 warn_return_any = true
 warn_unused_ignores = true
 show_error_codes = true
+
+[[tool.mypy.overrides]]
+module = [
+    'pandas.*',
+    'TikTokApi.*'
+]
+warn_return_any = false
+ignore_missing_imports = true
+
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
