--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 python-dotenv = "^0.20.0"
 TikTokApi = "^5.2.2"
 pandas = "^1.4.3"
+tables = "^3.7.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
