--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ TikTokApi = "^5.2.2"
 pandas = "^1.4.3"
 tables = "^3.7.0"
 networkx = "^2.8.6"
+networkx-query = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
@@ -67,6 +68,7 @@ module = [
     'pandas.*',
     'TikTokApi.*',
     'networkx.*',
+    'networkx_query.*'
 ]
 warn_return_any = false
 ignore_missing_imports = true
