--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.4.3"
 tables = "^3.7.0"
 networkx = "^2.8.6"
 networkx-query = "^1.0.1"
+openpyxl = "^3.0.10"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
