--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 python-dotenv = "^0.20.0"
-TikTokApi = "^5.2.2"
 pandas = "^1.4.3"
 tables = "^3.7.0"
 networkx = "^2.8.6"
 networkx-query = "^1.0.1"
 openpyxl = "^3.0.10"
+tiktokapi = {git = "git@github.com:MacarielAerial/TikTok-Api.git", rev = "cookie_in_request"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
