--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ yamllint = "^1.28.0"
 semgrep = "^0.121.2"
 poetryup = "^0.12.3"
 types-requests = "^2.28.11.4"
+nbformat = "^5.7.0"
+horus = {git = "git@github.com:MacarielAerial/horus.git", rev = "main"}
 
 [build-system]
 requires = ["poetry-core"]
